Refactor and bug fixing

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tetris Rotativo</title>
+    <title>Rotrix</title>
     <style>
         body {
             display: flex;
@@ -35,6 +35,6 @@
             <p>↓ : Caída rápida</p>
         </div>
     </div>
-    <script src="tetris.js"></script>
+    <script type="module" src="rotrix.js"></script>
 </body>
 </html> 
