--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
         .controls {
             color: white;
         }
+        .score {
+            color: white;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="game-container">
+        <div class="score">Score: <span id="scoreDisplay">0</span></div>
         <canvas id="gameCanvas"></canvas>
         <div class="controls">
             <p>Controles:</p>
