Fixed gravity rotation

--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
     <div class="game-container">
         <div class="game-header">
             <div class="game-info">
-                <div class="score">Score: <span id="scoreDisplay">0</span></div>
+                <div>
+                    <div class="score">Score: <span id="scoreDisplay">0</span></div>
+                    <div class="score" style="margin-top: 10px;">Lines: <span id="linesDisplay">0</span></div>
+                </div>
                 <div class="level">Level: <span id="levelDisplay">1</span></div>
             </div>
             <canvas id="nextPieceCanvas" class="next-piece"></canvas>
