--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Rotrix - Tetris con Gravedad Invertida</title>
+    <title>Rotrix - Gravity-Defying Block Puzzle</title>
     <style>
         * {
             box-sizing: border-box;
